# ROSTemplateTutorial

./: .gitignore  ArduinoNode.md  CMakeLists.txt  List of Exercises.md  README.md  ROSAnalysisGuide.md  ROS_Template.code-workspace  Readme.md  example.py  ros_notes.md
doc/: notes.txt
docker/: docker_commands.md
docs/: ROSAnalysisGuide.md  ros_notes.md
scripts/: pub_example1.py  repo_docker.sh  sub_example1.py
sensor_action_server/: package.xml
sensor_action_server/src/: sensor_action_client.cpp
sort/sensor_action_server/: CMakeLists.txt
sort/sensor_action_server/action/: ArucoDetect.action  basic_action.action
sort/sensor_action_server/scripts/: aruco_sensor_client.py  aruco_sensor_server.py
sort/sensor_action_server/src/: sensor_action_server.cpp
src/: Guidelines.md  Readme.md  package.xml
src/ard_publish_ex1/: README.md
src/doc/: notes.txt
src/other/: CMakeLists_.txt
src/other/ard_publish_ex1/: ard_publish_ex1.ino
src/other/msg/: controlLoop.msg
src/other/scripts/: test_log.py
src/ros_outline/examples/: README.md
src/ros_outline/examples/0_packages_and_debug/: README.md
src/ros_outline/examples/1_class_designs/: README.md
src/ros_outline/examples/1_class_designs/cpp_basic_class_design/: CMakeLists.txt  README.md  package.xml
src/ros_outline/examples/1_class_designs/cpp_basic_class_design/include/: cpp_class.h  cpp_class2.h  rosclasstemplate.h
src/ros_outline/examples/1_class_designs/cpp_basic_class_design/launch/: file1.launch
src/ros_outline/examples/1_class_designs/cpp_basic_class_design/src/: class_design_full.cpp  cpp_class.h  cpp_class_design_full.cpp  cpp_run_node_example.cpp  run_node_example.cpp
src/ros_outline/examples/1_class_designs/python_basic_class_design/: CMakeLists.txt  package.xml
src/ros_outline/examples/1_class_designs/python_basic_class_design/src/: python_class_design.py
src/ros_outline/examples/2_message/: README.md
src/ros_outline/examples/2_messages/: README.md
src/ros_outline/examples/2_messages/message_example/: CMakeLists.txt  package.xml
src/ros_outline/examples/2_messages/message_example/msg/: basic_message.msg
src/ros_outline/examples/3_pub_sub/: README.md
src/ros_outline/examples/3_pub_sub/launch/: cpp_pub_sub_example.launch
src/ros_outline/examples/3_pub_sub/pub/: CMakeLists.txt  package.xml
src/ros_outline/examples/3_pub_sub/pub/src/: cpp_pub.cpp
src/ros_outline/examples/3_pub_sub/sub/: CMakeLists.txt  package.xml
src/ros_outline/examples/3_pub_sub/sub/src/: arudino_param_set.py  cpp_sub.cpp
src/ros_outline/examples/4_parameters/: README.md
src/ros_outline/examples/4_parameters/cpp_parameters_example/: CMakeLists.txt  package.xml
src/ros_outline/examples/4_parameters/cpp_parameters_example/src/: parameters_example.cpp
src/ros_outline/examples/4_parameters/parameters_example/: CMakeLists.txt  package.xml
src/ros_outline/examples/4_parameters/parameters_example/script/: python_parameter.py
src/ros_outline/examples/4_parameters/parameters_example/src/: parameters_example.cpp
src/ros_outline/examples/5_services/: README.md
src/ros_outline/examples/5_services/cpp_service_example/: CMakeLists.txt  package.xml
src/ros_outline/examples/5_services/cpp_service_example/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/ros_outline/examples/5_services/python_service_exampe/: CMakeLists_.txt  package_.xml
src/ros_outline/examples/5_services/service_client_example/: CMakeLists.txt  package.xml
src/ros_outline/examples/6_actions/action_server_example/: CMakeLists.txt  package.xml
src/ros_outline/examples/6_actions/cpp_action_example/: CMakeLists.txt  CMakeLists_.txt  package.xml  package_.xml
src/ros_outline/examples/6_actions/cpp_action_example/src/: action_client_example.cpp  action_server_example.cpp
src/ros_outline/examples/6_actions/python_action_example/: CMakeLists_.txt  package_.xml
src/ros_outline/examples/7_packages/use_another_package/: CMakeLists.txt  package.xml
src/ros_outline/examples/dynamic_reconfigure_8/: 8_README.md  CMakeLists.txt  package.xml
src/ros_outline/examples/dynamic_reconfigure_8/cfg/: example.cfg  nodeExample.cfg
src/ros_outline/examples/dynamic_reconfigure_8/cfg/cpp/dynamic_reconfigure_8/: dconfigConfig.h  exampleConfig.h
src/ros_outline/examples/dynamic_reconfigure_8/src/: dyn_cfg_node.cpp
src/ros_outline/examples/dynamic_reconfigure_8/src/dynamic_reconfigure_8/cfg/: dconfigConfig.py
src/scripts/: pub_example1.py  sub_logger_v1.py
ur scratch/: ur_scratch
ur scratch_launch files/: ur_scratch_1
