<?xml version="1.0"?>
<package format="2">
  <name>message_example</name>
  <version>0.0.0</version>
  <description>The message_example package</description>

    <!--    One maintainer tag required, multiple allowed, one person per tag 
            One license tag required.
            Author tag optional.
            URL tag optional.
    -->
    <maintainer email="wwaltz@todo.todo">wwaltz</maintainer>

    <license>TODO</license>

    <author email="wwaltz@todo.todo">Walter Waltz</author>


    <!-- The *depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!--  
        Use depend as a shortcut for packages that are both build and exec dependencies 
        Use build_export_depend for packages you need in order to build against this package
        Use buildtool_depend for build tool packages:
        Use exec_depend for packages you need at runtime:
        Use test_depend for packages you need only for testing:
        Use doc_depend for packages you need only for building documentation:
        Use build_depend for packages you need at compile time:
    -->

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_export_depend>message_generation</build_export_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>custom_msgs</depend>
    
    <exec_depend>message_runtime</exec_depend>    
    
    <!-- The export tag contains other, unspecified, tags -->
    <export>
    </export>
</package>
